fix scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,7 @@ span.action {
 .EWChange{
   color:red;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
